--- a/index.html
+++ b/index.html
@@ -9,32 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <table class="table table-warning table-hover table-bordered">
-            <thead>
-                <tr class="table-info">
-                    <th>First</th>
-                    <th>second</th>
-                    <th>third</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                <tr>
-                    <td>kyle</td>
-                    <td>cook</td>
-                    <td>27</td>
-                </tr>
-                <tr>
-                    <td>sally</td>
-                    <td>thorn</td>
-                    <td>13</td>
-                </tr>
-                <tr>
-                    <td>jim</td>
-                    <td>smith</td>
-                    <td>48</td>
-                </tr>
-            </tbody>
-        </table>
+        <form>
+            <label for="email" class="form-label">Email</label>
+            <input type="email" id="email" class="form-control form-control-lg" disabled name="email">
+            <button>Submit</button>
+        </form>
     </div>  
 </body>
 </html>
